--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,13 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-#  - resources/namespace.yaml # ignore namespace creation - we don't want it cleaned if the app is destroyed because it will also remove our secrets
   - https://raw.githubusercontent.com/argoproj/argo-workflows/master/manifests/quick-start-postgres.yaml
 
-#patchesStrategicMerge:
-#  - overlays/workflow-controller-configmap.yaml
-#  - overlays/argo-server-role.yaml
-#  - overlays/argo-server-sa.yaml
-#  - overlays/argo-server-deploy.yaml
+patchesStrategicMerge:
+  - overlays/nodeport.yaml
 
 namespace: argo
