--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -7,11 +7,18 @@ resources:
 patchesJSON6902:
 - target:
     kind: Deployment
+    name: workflow-controller
+  patch: |-
+    - op: replace
+      path: /spec/template/spec/containers/0/image
+      value: quay.io/bradfordwagner/argo:2.3.2-workflow_controller-v3.3.5
+- target:
+    kind: Deployment
     name: argo-server
   patch: |-
     - op: replace
       path: /spec/template/spec/containers/0/image
-      value: quay.io/bradfordwagner/argo:2.2.1-argocli-v3.3.1
+      value: quay.io/bradfordwagner/argo:2.3.2-argocli-v3.3.1
 - target:
     kind: Service
     name: argo-server
