--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,23 +2,23 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - https://raw.githubusercontent.com/argoproj/argo-workflows/master/manifests/quick-start-postgres.yaml
+  - https://raw.githubusercontent.com/argoproj/argo-workflows/master/manifests/quick-start-minimal.yaml
 
 patchesJSON6902:
-- target:
-    kind: Deployment
-    name: workflow-controller
-  patch: |-
-    - op: replace
-      path: /spec/template/spec/containers/0/image
-      value: quay.io/bradfordwagner/argo:2.3.2-workflow_controller-v3.3.5
-- target:
-    kind: Deployment
-    name: argo-server
-  patch: |-
-    - op: replace
-      path: /spec/template/spec/containers/0/image
-      value: quay.io/bradfordwagner/argo:2.3.2-argocli-v3.3.1
+# - target:
+#     kind: Deployment
+#     name: workflow-controller
+#   patch: |-
+#     - op: replace
+#       path: /spec/template/spec/containers/0/image
+#       value: quay.io/bradfordwagner/argo:2.3.2-workflow_controller-v3.3.5
+# - target:
+#     kind: Deployment
+#     name: argo-server
+#   patch: |-
+#     - op: replace
+#       path: /spec/template/spec/containers/0/image
+#       value: quay.io/bradfordwagner/argo:2.3.2-argocli-v3.3.1
 - target:
     kind: Service
     name: argo-server
